src/test/data/c/fail/typedef_conflict.c
typedef int myint;
typedef long myint;
